fix light theme text, remove scrollbar, fix hero image sizing

--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
   --bg: #070606;
   --text: #fff;
   --secondary: #fff;
-  --show: default;
+  --show: 1;
   --button-glow: drop-shadow(0px 0px 21px #f14a16);
   --card-grey-bg: linear-gradient(
     164deg,
@@ -13,9 +13,10 @@
   --cta-shadow: none;
   --toggle-shadow: none;
   --brightness-filter: none;
+  --nav-bg: #fcfcfc22;
 }
 [data-theme="light"] {
-  --show: none;
+  --show: 0;
   --text: #000;
   --secondary: #282828;
   --bg: #fcfcfc;
@@ -25,11 +26,28 @@
   --cta-shadow: drop-shadow(0px 2px 8px rgba(0, 0, 0, 0.6));
   --toggle-shadow: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.25));
   --brightness-filter: brightness(0.117);
+  --nav-bg: #ffffff32;
 }
 // $main-background: #070606;
 * {
   margin: 0;
   font-family: "Proxima Nova", sans-serif;
+}
+button {
+  background-color: transparent;
+}
+a:link {
+  text-decoration: inherit;
+  color: inherit;
+}
+
+a:visited {
+  text-decoration: inherit;
+  color: inherit;
+}
+a:hover {
+  text-decoration: underline;
+  color: inherit;
 }
 .container {
   z-index: 1;
@@ -111,6 +129,11 @@
   &__scroll-container {
     order: -1;
     align-self: flex-start;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
 
@@ -137,6 +160,11 @@
     overflow-y: visible;
     overflow-x: scroll;
     align-items: flex-end;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
   &--sm {
     height: 209px;
@@ -201,6 +229,10 @@
   line-height: normal;
   letter-spacing: 0.68px;
   filter: var(--button-glow);
+  transition: scale 0.3s ease;
+  &:hover {
+    scale: 1.1;
+  }
   &--img {
     height: 28px;
     border: none;
@@ -302,7 +334,7 @@
 }
 
 .blob-wrapper {
-  display: var(--show);
+  opacity: var(--show);
   position: absolute;
   box-sizing: border-box;
   overflow-x: clip;
@@ -314,7 +346,7 @@
   // overflow: hidden;
 }
 .hero__decorator {
-  display: var(--show);
+  opacity: var(--show);
 
   &--1 {
     position: absolute;
@@ -342,17 +374,28 @@
 
 .navbar {
   z-index: 10;
-  top: 16px;
   position: fixed;
   justify-content: space-between;
   width: 100%;
+  background-color: var(--nav-bg);
+  border-radius: 0 0 20px 20px;
+  backdrop-filter: blur(12px);
+  @media (min-width: 768px) {
+    border-radius: 0 0 40px 40px;
+  }
+  // height: ;
   &__container {
     position: relative;
     display: flex;
     justify-content: space-between;
-    height: 60px;
     align-items: center;
-    padding: 0 24px;
+    padding: 16px 24px;
+    @media (min-width: 768px) {
+      padding: 0 40px;
+    }
+    @media (min-width: 1280px) {
+      padding: 0 40px;
+    }
     &--bg-overlay {
       background: rgba($color: var(--text), $alpha: 0.05);
       border-radius: 20px;
@@ -411,8 +454,9 @@
   display: inline-flex;
   width: 60px;
   height: 28px;
+  cursor: pointer\7;
   background-color: var(--bg);
-  box-shadow: var(--toggle-shadow);
+  filter: var(--toggle-shadow);
   border-radius: 37px;
   align-items: center;
   justify-content: space-around;
@@ -427,7 +471,7 @@
     width: 21px;
     height: 21px;
     border-radius: 50%;
-    transition: 0.4s;
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     // transition: left 0.7s; /** <- removed position **/
     // transition: right 0.7s; /** <- removed position **/
     // left: 0;
@@ -564,7 +608,10 @@
     font-style: normal;
     font-weight: 400;
     letter-spacing: 0.32px;
-    &-secondary {
+    &--offset {
+      color: var(--text);
+    }
+    &--secondary {
       font-size: 21px;
       font-weight: 400;
       line-height: 36px; /* 171.429% */
@@ -878,7 +925,6 @@
 
 @media (min-width: 768px) {
   .navbar {
-    top: 24px;
     &__logo-wrapper {
       width: 125px;
       height: 125px;
@@ -892,8 +938,9 @@
       transform: none;
     }
     &__icons-wrapper {
-      gap: 20px;
+      gap: 4px;
       @media (min-width: 1080px) {
+        gap: 20px;
       }
     }
     &__logo {
@@ -930,13 +977,13 @@
     &__search {
       display: none;
     }
-    &__image-container {
+    // &__image-container {
+    // }
+    &__image {
       position: absolute;
       bottom: 117px;
       z-index: -1;
       right: 0;
-    }
-    &__image {
       object-fit: cover;
       max-width: 80vw;
       @media (min-width: 1024px) {
@@ -976,7 +1023,10 @@
   }
 
   .button {
-    padding: 18px 54px;
+    padding: 4px 8px;
+    @media (min-width: 1280px) {
+      padding: 18px 54px;
+    }
     &--sm {
       font-size: 16px;
       letter-spacing: 0.4px;
@@ -1185,19 +1235,23 @@
         height: 725px;
         justify-content: center;
       }
-      &__banner.banner {
-        order: -1;
-        max-width: 725px;
-        max-height: 720px;
-        // height: 100%;
-        // width: 100%;
-        margin: 140px auto;
+      &__banner {
+        width: 50%;
+        &.banner {
+          order: -1;
+          max-width: 725px;
+          max-height: 720px;
+          // height: 100%;
+          // width: 100%;
+          margin: 140px auto;
+        }
       }
       .banner__image {
         // order: -1;
         max-width: 725px;
         max-height: 720px;
       }
+
       .banner__flag {
         width: 166px;
         height: 166px;
